--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "serve": "export SET NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve",
+    "build": "export SET NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.6.5",
     "socket.io-client": "^4.4.1",
     "sweetalert": "^2.1.2",
